--- a/app/src/main/res/xml/locales.xml
+++ b/app/src/main/res/xml/locales.xml
@@ -13,4 +13,5 @@
     <locale android:name="it" />
     <locale android:name="fil" />
     <locale android:name="fr" />
+    <locale android:name="ja" />
 </locale-config>
